--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "lenis": "^1.2.3",
+    "lodash": "^4.17.21",
     "ogl": "^1.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
